--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ignite-ReactJS-Fundamentos-do-Next.js-ig.news",
+  "name": "ignews",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
