--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
+    "next": "^12.1.6",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "sass": "^1.51.0",
-    "stripe": "^8.222.0"
+    "stripe": "^8.222.0",
+    "type": "^2.6.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
     "eslint": "8.14.0",
